<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Noni</string>
    <string name="cancel">Cancel</string>
    <string name="app_version">Version 1.0</string>
    <string name="action_settings">Settings</string>
    <!-- Activities -->
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_model">Model</string>
    <string name="title_activity_location_service">Location Activity</string>

    <!-- Demo menu -->
    <string name="item">item</string>

    <string-array name="menu_items">
        <item>Load Model</item>
        <item>Models</item>
        <item>Demo</item>
        <!-- <item>Settings</item> -->
        <item>Help</item>
        <item>About</item>
        <item>Exit</item>
    </string-array>

    <string name="image">image</string>
    <!-- Help -->
    <string name="help_text">* Load Model: Load models from your device storage (you can find a lot in Internet. Just download them to your device). Please load only wavefront object files (*.obj). If the model file (.obj) is referencing any materials file (*.mtl) be sure its in the same folder; same applies for texture files (*.jpg, *.bmp) being referenced in the material file.\n\n.* Models: Included with the app there is some models I downloaded from Internet (www.turbosquid.com), and serves as example of wavefront files that can be loaded with the app.\n\n* Demo: This is a demo of what can be done with the app. It basically loads several models to show usage of draw modes, colors, textures and loading of files. Serves basically to test the application when Im developing.\n\n* Help: This instructions page\n\n* About: Credits of this app.\n\n\nViewer: Once you load a model, you can pinch to zoom, rotate the camera with your finger and rotate the screen with 2 fingers\n\nIn the action bar you will also find 2 buttons: 1 for toggling the wireframe draw mode and 1 for toggling the bounding boxes.</string>
    <!-- Load settings -->
    <string name="model_name">Model name</string>
    <string name="texture">Texture</string>
    <string name="invert_texture_coordinates">Invert texture coordinates</string>
    <string name="load">Load</string>
    <string name="load_model">Load Model</string>

    <!-- GL Settings -->
    <string name="toggle_wireframe">Toggle wireframe</string>
    <string name="toggle_textures">Toggle textures</string>
    <string name="toggle_lights">Toggle lights</string>
    <string name="toggle_boundingbox">Toggle bounding box</string>

    <!-- To review -->
    <string name="submit">Submit</string>
    <string name="ingredients">Ingredients</string>
    <string name="less_than_one_mile">less than a mile away</string>
    <string name="restaurants_near_you">Restaurants near you</string>
    <string name="loading_progress_circle">Loading progress circle</string>
    <string name="loading_message">Finding cool restaurants !</string>
    <string name="zip_code">zip code</string>
    <string name="miles">miles</string>
    <string name="mile_s">mile(s)</string>
    <string name="support_location_message">* Currently only supported within *  Orlando, Florida area</string>
    <string name="zipcode_query">Please enter a Zipcode</string>
    <string name="zipcode">Zipcode</string>
    <string name="search_settings">Settings</string>
    <string name="holds_restaurant_image">Holds restaurant image</string>
    <string name="location">Location</string>
    <string name="ar_selection_image">AR Selection Image</string>
    <string name="_3d_menu">3D MENU</string>
    <string name="_3d_selection_image">3D Selection Image</string>
    <string name="ar_menu">AR MENU</string>
    <string name="or">OR</string>
    <string name="max_distance_miles">Max Distance: (miles)</string>
    <string name="fetching_your_meal">Fetching your meal...</string>
    <string name="location_preferences">Location Preferences</string>
    <string name="switchMode">switch</string>
</resources>
