<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Zip code:         "

        android:layout_margin="8dp"
        android:textSize="20sp"/>

        <EditText
            android:id="@+id/newAddress"
            android:inputType="textPostalAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/zip_code"
            android:digits="0123456789+"
            android:maxLength="5"
            android:lines = "1"
            android:layout_margin="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Max Distance: "
        android:layout_margin="8dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/newRadius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:digits="0123456789+"
        android:maxLength="2"
        android:lines = "1"
        android:hint="@string/miles"
        android:layout_margin="8dp"
        android:inputType="number"
        android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mile_s"
            android:textSize="20sp"
            android:layout_margin="8dp"/>

</LinearLayout>

    <TextView
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/avenir"
        android:textSize="18sp"
        android:text="@string/support_location_message"/>

</LinearLayout>