<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal|center"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar"
        layout="@layout/location_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:fontFamily="@font/avenir"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingTop="6dp"
            android:text="@string/restaurants_near_you"
            android:textColor="#000000"
            android:textSize="20sp" />

        <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/title"
            android:layout_marginTop="4dp">

            <!-- A RecyclerView with some commonly used attributes -->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/restaurant_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/title"
                android:scrollbars="vertical" />
        </android.support.v4.widget.SwipeRefreshLayout>

        <ImageView
            android:id="@+id/gif_view"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:contentDescription="@string/loading_progress_circle" />

        <TextView
            android:id="@+id/search_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gif_view"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:fontFamily="@font/avenir"
            android:paddingTop="8dp"
            android:text="@string/loading_message"
            android:textSize="24sp" />

    </RelativeLayout>

</LinearLayout>